log

Thu 14 Mar 2024 02:37:05 PM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
b0386d2
Thu 14 Mar 2024 02:37:53 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
a53952b
Thu 14 Mar 2024 02:47:50 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++---
 1 file changed, 24 insertions(+), 3 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:8: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   28 | return arr;
      |        ^~~
exercises.c:26:6: note: declared here
   26 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c2eb30f
Thu 14 Mar 2024 02:56:39 PM UTC: 
 exercises.c | 7 -------
 1 file changed, 7 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:8: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   28 | return arr;
      |        ^~~
exercises.c:26:6: note: declared here
   26 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7cd5065
Thu 14 Mar 2024 02:57:02 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:1: error: expected expression before ‘else’
   28 | else if (size%2==0){
      | ^~~~
Compilation failed
357f718
Thu 14 Mar 2024 02:57:23 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:4: error: expected ‘(’ before ‘else’
   28 | if else  (size%2==0){
      |    ^~~~
      |    (
Compilation failed
47af2e3
Thu 14 Mar 2024 02:59:32 PM UTC: 
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:28:4: error: expected ‘(’ before ‘else’
   28 | if else  (size%2==0){
      |    ^~~~
      |    (
Compilation failed
901a0ef
Thu 14 Mar 2024 03:00:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5534c46
Thu 14 Mar 2024 03:01:49 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:37:10: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   37 |   return arr;
      |          ^~~
exercises.c:26:6: note: declared here
   26 | void reverseArray(int arr[], int size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3634f23
Thu 14 Mar 2024 03:02:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
722f5a1
Thu 14 Mar 2024 03:09:19 PM UTC: 
 exercises.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 20/70
61e5029
